[project]
name = "ism-incognito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "setuptools>=75.3.2",
    "six>=1.17.0",
    "tqdm>=4.67.1",
    "tzdata>=2025.2",
    "ucimlrepo>=0.0.7",
    "wheel>=0.45.1",
]
